<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Github ConsumerApp</string>
    <string name="slogan">"Store Code Share Code"</string>
    <string name="title">Github</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="my_profil_desc">\t\t\tHi, saya Rosyid Rosadi seorang Freelancer sejak 2017. Pertama kali kenal dunia programming pada akhir 2018, ketika mengerjakan projek tools untuk Trading Forex berbasis Machine Learning sederhana menggunakan C++. Mengikuti 1 bootcamp Fullstack Web Node.Js dan sekali ikut pelatihan online Fullstack Mobile Development menggunakan framework Flutter.</string>

    <!-- Other string resources-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="most_popular">Most Popular</string>
    <string name="explore_content">Explore Content</string>
    <string name="name_mostpopular">Name</string>
    <string name="check_more">Check More</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>
    <string name="jake_wharton">Jake Wharton</string>
    <string name="google_inc">Google, Inc.</string>
    <string name="pittsburgh_pa_usa">Pittsburgh, PA, USA</string>
    <string name="_73400">73400</string>
    <string name="repository">Repository</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="options">Options</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="cardview">CardView</string>
    <string name="favorites">Favorites ConsumerApp</string>
    <string name="home">Home ConsumerApp</string>
    <string name="developer">Developer ConsumerApp</string>
    <string name="challenges">Challenges ConsumerApp</string>
    <string name="study_room">Study Room ConsumerApp</string>
    <string name="profile">Profile ConsumerApp</string>
    <string name="setting">Setting ConsumerApp</string>
    <string name="language">Language ConsumerApp</string>
    <string name="list_developer">List Developer</string>
    <string name="input_username">Input username</string>

    <string name="nothing">Nothing</string>
    <string name="reminder">Reminder</string>
    <string name="key_reminder">reminder</string>
</resources>