<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/act_listOption"
        android:title="@string/options"
        android:icon="@drawable/ic_list_option"
        android:visible="true"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/fab_list"
                android:title="@string/list"
                app:showAsAction="never"/>

            <item
                android:id="@+id/fab_grid"
                android:title="@string/grid"
                app:showAsAction="never"/>

            <item
                android:id="@+id/fab_cardView"
                android:title="@string/cardview"
                app:showAsAction="never"/>

        </menu>

    </item>

    <item
        android:id="@+id/act_favorite"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorite"
        android:visible="true"
        app:showAsAction="ifRoom"/>

</menu>